[package]
name = "ahub"
version = "0.1.0"
description = "Access Hub CLI"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.1.6", features=["derive", "cargo"]}
sqlx = { version = "0.5.11", features = [ "macros", "sqlite", "runtime-async-std-native-tls" ] }
async-std = { version = "1", features = [ "attributes" ] }