[package]
name = "ahub"
version = "0.1.0"
description = "Access Hub CLI"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="=3.1.6", features=["derive", "cargo"]}
sqlx = { version = "=0.5.11", features = [ "macros", "migrate", "sqlite", "chrono", "runtime-async-std-native-tls" ] }
chrono = "0.4.19"
async-std = { version = "1.*", features = [ "attributes" ] }
anyhow = "1.*"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }